# dragongo

./: .gitignore  CMakeLists.txt  README.md  diffs.txt  go-sha1.cpp  go-system.h  goparse-llvm.cpp  llvm-goparse.cpp
llvm-gofrontend/: CMakeLists.txt  bnode.cpp  bnode.h  go-backend.cpp  go-c.h  go-linemap.cpp  go-llvm-backend.h  go-llvm-bexpression.cpp  go-llvm-bexpression.h  go-llvm-bfunction.cpp  go-llvm-bfunction.h  go-llvm-bnode.cpp  go-llvm-bnode.h  go-llvm-bstatement.cpp  go-llvm-bstatement.h  go-llvm-btype.cpp  go-llvm-btype.h  go-llvm-builtins.cpp  go-llvm-builtins.h  go-llvm-bvariable.cpp  go-llvm-bvariable.h  go-llvm-cabi-oracle.cpp  go-llvm-cabi-oracle.h  go-llvm-diagnostics.cpp  go-llvm-diagnostics.h  go-llvm-dibuildhelper.cpp  go-llvm-dibuildhelper.h  go-llvm-genblocks.cpp  go-llvm-genblocks.h  go-llvm-irbuilders.cpp  go-llvm-irbuilders.h  go-llvm-linemap.cpp  go-llvm-linemap.h  go-llvm-tree-integrity.cpp  go-llvm-tree-integrity.h  go-llvm-typemanager.cpp  go-llvm-typemanager.h  go-llvm.cpp  go-llvm.h  go-location.cpp  (+7 more)
tools/: gollvm-wrap.py  script_utils.py
unittests/: CMakeLists.txt
unittests/BackendCore/: BackendArrayStruct.cpp  BackendCABIOracleTests.cpp  BackendCallTests.cpp  BackendCoreTests.cpp  BackendDebugEmit.cpp  BackendExprTests.cpp  BackendFcnTests.cpp  BackendNodeTests.cpp  BackendPointerExprTests.cpp  BackendStmtTests.cpp  BackendTreeIntegrity.cpp  BackendVarTests.cpp  CMakeLists.txt  DiffUtils.h  LinemapTests.cpp  Sha1Tests.cpp  TestUtils.cpp  TestUtils.h  TestUtilsTest.cpp
unittests/Parser/: CMakeLists.txt  ParserTest.cpp
